[package]
name = "rust-web"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.1"
base64 = "0.20.0"
hyper = "0.14.23"
mockall = "0.11.3"
mongodb = "2.3.1"
once_cell = "1.16.0"
ring = "0.16.20"
serde = "1.0.147"
serde_json = "1.0.87"
sha2 = "0.10.6"
tokio = { version = "1.21.2", features = ["full"] }
